kube/system/longhorn/002-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: longhorn
  namespace: longhorn-system
spec:
  ingressClassName: nginx
  rules:
  - host: longhorn.dev.d00t.me
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: longhorn-frontend
            port:
              name: http
  tls:
  - hosts:
    - longhorn.dev.d00t.me
    secretName: longhorn-cert-prod
